--- a/index.html
+++ b/index.html
@@ -12269,6 +12269,13 @@
 </tr>
 
 <tr>
+<td>Blitz</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blizzard</td>
 <td>1991</td>
 <td>Publisher</td>
@@ -13007,6 +13014,13 @@
 <td>2016</td>
 <td>Action Lab</td>
 <td><a href="ActionLab/ActionLab.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bomarc</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17083,6 +17097,13 @@
 </tr>
 
 <tr>
+<td>Children Of The Night</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Children Of The Sea</td>
 <td>2009</td>
 <td>Viz</td>
@@ -17206,6 +17227,13 @@
 <td>1989</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>China Sea</td>
+<td>1991</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25270,6 +25298,34 @@
 </tr>
 
 <tr>
+<td>Dragonfire</td>
+<td>1991</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragonfire: The Classified Files</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragonfire: The Early Years</td>
+<td>1993</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragonfire: UFO Wars</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dragonflight</td>
 <td>1991</a>
 <td>Eclipse
@@ -26640,10 +26696,59 @@
 </tr>
 
 <tr>
+<td>Elfheim</td>
+<td>1991</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elfheim: Dragon's Dreams</td>
+<td>1993</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Elflord Chronicles</td>
 <td>1991</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elflord: Dragon's Eye</td>
+<td>1993</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elflord: Return Of The King</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elflord: Summer's Magic</td>
+<td>1993</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elflore</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elflore: High Seas</td>
+<td>1993</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30688,6 +30793,13 @@
 <td>1939</td>
 <td>Publisher</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Foxfire</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41767,6 +41879,13 @@
 <td>2019</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kimura</td>
+<td>1991</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59957,10 +60076,45 @@
 </tr>
 
 <tr>
+<td>Samurai: Death Of A Legend</td>
+<td>1993</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Samurai: Demon Sword</td>
+<td>1993</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Samurai: Heaven And Earth</td>
 <td>2004</td>
 <td>Dark Horse</td>
 <td><a href="SamuraiHeavenAndEarth/SamuraiHeavenAndEarth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Samurai: Mystic Cult</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Samurai: Vampire's Hunt</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Samurai: Yakuza's Revenge</td>
+<td>1993</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
 </tr>
 
 <tr>
@@ -61297,6 +61451,13 @@
 <td>1987</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Serpentyne</td>
+<td>1992</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64826,6 +64987,13 @@
 </tr>
 
 <tr>
+<td>Stardusters</td>
+<td>1991</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stargate Atlantis Gateways</td>
 <td>2016</td>
 <td>American Mythology</td>
@@ -65719,6 +65887,13 @@
 <td>1986</td>
 <td>Renegade</td>
 <td><a href="RenegadePress/RenegadePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stratonaut</td>
+<td>1991</td>
+<td>Night Wynd</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
 </tr>
 
 <tr>
