--- a/index.html
+++ b/index.html
@@ -5438,6 +5438,13 @@
 </tr>
 
 <tr>
+<td>Amryl Entertainment</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="BasementComics/BasementComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Amusing Stories</td>
 <td>1986</td>
 <td>Renegade</td>
@@ -9388,6 +9395,13 @@
 <td>2003</td>
 <td>Viz</td>
 <td><a href="Viz/Viz.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Basement Comics</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="BasementComics/BasementComics.html">Details</a></td>
 </tr>
 
 <tr>
