--- a/index.html
+++ b/index.html
@@ -9461,6 +9461,13 @@
 </tr>
 
 <tr>
+<td>Bathing Machine</td>
+<td>1987</td>
+<td>C&amp;T Graphics</td>
+<td><a href="CTGraphics/CTGraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bathory: Countess Of Blood</td>
 <td>1993</td>
 <td>Boneyard</td>
@@ -14750,6 +14757,13 @@
 <td>1998</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>C&amp;T Graphics</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20736,6 +20750,13 @@
 </tr>
 
 <tr>
+<td>Czar Chasm</td>
+<td>1987</td>
+<td>C&amp;T Graphics</td>
+<td><a href="CTGraphics/CTGraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td><a name="d">D-Day</a></td>
 <td>1963</td>
 <td>Charlton</td>
@@ -23622,6 +23643,13 @@
 <td>1950</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Diggers</td>
+<td>1988</td>
+<td>C&amp;T Graphics</td>
+<td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29765,6 +29793,13 @@
 <td>2007</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Final Man</td>
+<td>1987</td>
+<td>C&amp;T Graphics</td>
+<td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37053,6 +37088,13 @@
 </tr>
 
 <tr>
+<td>Honko The Clown</td>
+<td>1987</td>
+<td>C&amp;T Graphics</td>
+<td><a href="CTGraphics/CTGraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hood</td>
 <td>2002</td>
 <td>Marvel</td>
@@ -42344,6 +42386,13 @@
 </tr>
 
 <tr>
+<td>Kiwanni: Daughter Of The Dawn</td>
+<td>1988</td>
+<td>C&amp;T Graphics</td>
+<td><a href="CTGraphics/CTGraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kizoic Presents: Dreamworks Kung Fu Panda</td>
 <td>2009</td>
 <td>Ape</td>
@@ -43748,6 +43797,13 @@
 <td>1989</td>
 <td>Greater Mercury</td>
 <td><a href="GreaterMercury/GreaterMercury.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legions Of Ludicrous Hero</td>
+<td>1987</td>
+<td>C&amp;T Graphics</td>
+<td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48470,6 +48526,13 @@
 <td>1989</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mightyguy</td>
+<td>1987</td>
+<td>C&amp;T Graphics</td>
+<td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
 <tr>
