--- a/index.html
+++ b/index.html
@@ -2420,6 +2420,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Chrissie Claus</td>
+<td>1991</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Cyclops And Phoenix</td>
 <td>1994</td>
 <td>Marvel</td>
@@ -2466,6 +2473,13 @@
 <td>1972</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of Heather Reilly</td>
+<td>2009</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4623,6 +4637,13 @@
 <td>1997</td>
 <td>Hamster</td>
 <td><a href="HamsterPress/HamsterPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alter Ego</td>
+<td>2011</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8783,6 +8804,13 @@
 </tr>
 
 <tr>
+<td>Bad Luck</td>
+<td>1993</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bad Medicine</td>
 <td>2012</td>
 <td>Oni</td>
@@ -11590,6 +11618,13 @@
 </tr>
 
 <tr>
+<td>Black Enchantress</td>
+<td>2005</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Flag</td>
 <td>1994</td>
 <td>Image</td>
@@ -14137,6 +14172,13 @@
 </tr>
 
 <tr>
+<td>Britannia The Lion Of Britain</td>
+<td>2016</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Britannia: Lost Eagles Of Rome</td>
 <td>2018</td>
 <td>Valiant</td>
@@ -15495,6 +15537,13 @@
 </tr>
 
 <tr>
+<td>Captain Thunder And Blue Bolt</td>
+<td>1987</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Underpants: The First Epic Movie</td>
 <td>2017</td>
 <td>Dreamworks</td>
@@ -16738,6 +16787,41 @@
 <td>1975</td>
 <td>Marvel</td>
 <td><a href="Champions/Champions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Champions</td>
+<td>1987</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Champions / Flare Adventures</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Champions Adventures</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Champions Annual</td>
+<td>1988</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Champions Classics</td>
+<td>1993</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18660,6 +18744,13 @@
 <td>1993</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coming Of Aphordite</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27543,6 +27634,13 @@
 </tr>
 
 <tr>
+<td>Eternity Smith</td>
+<td>1987</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eternity Triple Action</td>
 <td>1993</td>
 <td>Eternity</td>
@@ -30191,6 +30289,27 @@
 <td>1998</td>
 <td>A List Comics</td>
 <td><a href="AListComics/AListComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Flare</td>
+<td>1988</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Flare Adventures</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Flare Annual</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36689,6 +36808,27 @@
 </tr>
 
 <tr>
+<td>Heroic Publishing</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heroic Spotlight</td>
+<td>2010</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heroic Super-Spectacular</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hex Wives</td>
 <td>2018</td>
 <td>Vertigo</td>
@@ -37816,6 +37956,13 @@
 </tr>
 
 <tr>
+<td>Huntsman</td>
+<td>2016</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hup</td>
 <td>1986</td>
 <td>Last Gasp</td>
@@ -38079,6 +38226,13 @@
 <td>1984</td>
 <td>Marvel</td>
 <td><a href="Iceman/Iceman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Icicle</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38439,6 +38593,13 @@
 </tr>
 
 <tr>
+<td>Independent Publisher's Group Spotlight</td>
+<td>1993</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Indestructable</td>
 <td>2013</td>
 <td>IDW</td>
@@ -38646,6 +38807,13 @@
 <td>2015</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Infinites</td>
+<td>2011</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -39633,6 +39801,13 @@
 <td>1947</td>
 <td>Creator</td>
 <td><a href="JayLynch/JayLynch.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jay-Na: The Jungle Queen</td>
+<td>2019</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42890,6 +43065,13 @@
 </tr>
 
 <tr>
+<td>Lady Arcane</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lady Chatterly's Lover</td>
 <td>1986</td>
 <td>Knockabout</td>
@@ -43492,6 +43674,13 @@
 </tr>
 
 <tr>
+<td>League Of Champions</td>
+<td>2017</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>League Of Extraordinary Gentlemen</td>
 <td>1999</td>
 <td>America's Best</td>
@@ -43965,6 +44154,27 @@
 <td>2014</td>
 <td>Black Mask</td>
 <td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Liberty Comics</td>
+<td>2007</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Liberty Girl</td>
+<td>2006</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Liberty Girl The Return</td>
+<td>2007</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -46408,6 +46618,13 @@
 <td>2013</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marksman</td>
+<td>1988</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49781,6 +49998,13 @@
 </tr>
 
 <tr>
+<td>Mr. Fixitt</td>
+<td>1993</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mr. Jean: Free Comic Book Day Special</td>
 <td>2006</td>
 <td>Drawn &amp; Quarterly</td>
@@ -50044,6 +50268,13 @@
 <td>2010</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Murcielaga She-Bat</td>
+<td>1993</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -57909,6 +58140,13 @@
 </tr>
 
 <tr>
+<td>Reiki Warriors</td>
+<td>1993</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Relay</td>
 <td>2018</td>
 <td>Aftershock</td>
@@ -59525,6 +59763,13 @@
 
 <tr>
 <td>Rose</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rose</td>
 <td>2017</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
@@ -59619,6 +59864,13 @@
 <td>1948</td>
 <td>Dell</td>
 <td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Roy Thomas' Anthem</td>
+<td>2006</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -61409,6 +61661,13 @@
 <td>1942</td>
 <td>DC</td>
 <td><a href="SensationComics/SensationComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sensational G-Girl</td>
+<td>2016</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64196,6 +64455,13 @@
 </tr>
 
 <tr>
+<td>Sparkplug</td>
+<td>1993</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sparkplug Comics</a>
 <td>2002</td>
 <td>Publisher</td>
@@ -64487,6 +64753,13 @@
 <td>1992</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spotlight</td>
+<td>1993</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -68539,6 +68812,13 @@
 <td>1975</td>
 <td>Atlas Seaboard</td>
 <td><a href="Tigerman/Tigerman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tigress</td>
+<td>1992</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -74477,6 +74757,13 @@
 <td>1955</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Witchgirls Inc</td>
+<td>2005</td>
+<td>Heroic</td>
+<td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
 </tr>
 
 <tr>
