Impact Master Race

--- a/CaliberComics/CaliberComics.html
+++ b/CaliberComics/CaliberComics.html
@@ -108,7 +108,7 @@ Titles
 <li><a href="CaliberComics15.jpg">Apparition</a> (1996)
 <li><a href="CaliberComics4.jpg">Ashes</a> (1990)
 <li><a href="CaliberComics16.jpg">Atomic Overdrive</a> (1997)
-<li><a href="CaliberComics17.jpg">Attitude Lab</a> (1992)
+<li><a href="CaliberComics17.jpg">Attitude Lad</a> (1992)
 <li><a href="CaliberComics18.jpg">Autumn</a> (1995)
 <li><a href="CaliberComics5.jpg">Baker Street</a> (1989)
 <li><a href="CaliberComics6.jpg">Beck &amp; Caul</a> (1994)
