--- a/SlaveLaborGraphics/SlaveLaborGraphics.html
+++ b/SlaveLaborGraphics/SlaveLaborGraphics.html
@@ -343,7 +343,7 @@ In September 2008, SLG remodeled its lobby to be a smaller gallery/shop which op
 </p><p>
 Titles
 </p><p>
-<li><a href="SLG1.jpg">The 13th of Never</a> (2004)
+<li><a href="SLG1.jpg">13th of Never</a> (2004)
 <li><a href="SLG2.jpg">15 Minutes</a> (2004)
 <li><a href="SLG3.jpg">A Friendly Game</a> (2010)
 <li><a href="SLG4.jpg">Abel</a> 	(1998)
@@ -356,8 +356,8 @@ Titles
 <li><a href="SLG11.jpg">Awkward</a> (1999)
 <li><a href="SLG12.jpg">Awkward Universe</a> (1995)
 <li><a href="SLG13.jpg">Axis Mundi</a> (1996)
-<li><a href="SLG14.jpg">The B. A. C.: Bad Art Collection</a> (1996)
-<li><a href="SLG15.jpg">The Babysitter</a> 	(2008)
+<li><a href="SLG14.jpg">B. A. C.: Bad Art Collection</a> (1996)
+<li><a href="SLG15.jpg">Babysitter</a> 	(2008)
 <li><a href="SLG16.jpg">A Bag of Anteaters</a> (2005)
 <li><a href="SLG17.jpg">Barabbas</a> (1986)
 <li><a href="SLG18.jpg">Bear</a> (2003)
