--- a/ImpactEC/ImpactEC.html
+++ b/ImpactEC/ImpactEC.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-<img src="ImpactEC01.jpg"> <br>
-5 issues 1955 by EC
+<img src="ImpactEC01.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -29,9 +28,12 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Impact was a short-lived comic book series published by EC Comics in 1955 as the first title in its New Direction line. The bi-monthly comic, published by Bill Gaines and edited by Al Feldstein, began with an issue cover-dated March–April, 1955. It ran for five issues, ending with the November–December, 1955 issue. The sub-title "Tales Designed to Carry an" ran above the title Impact. The book was dedicated to stories with shock endings, and was seen as a toned down, Comics Code era version of EC's earlier Shock SuspenStories. Front covers were by Jack Davis, and the stories were illustrated by Davis, George Evans, Jack Kamen, Graham Ingels, Joe Orlando, Reed Crandall and Bernard Krigstein.
+Impact was a short-lived comic book series (5 issues) published by <a href="../ECComics/ECComics.html">EC Comics</a> in 1955 as the first title in its New Direction line. The bi-monthly comic, published by Bill Gaines and edited by Al Feldstein, began with an issue cover-dated March–April, 1955. It ran for five issues, ending with the November–December, 1955 issue. The sub-title "Tales Designed to Carry an" ran above the title Impact. The book was dedicated to stories with shock endings, and was seen as a toned down, Comics Code era version of EC's earlier Shock SuspenStories. Front covers were by Jack Davis, and the stories were illustrated by Davis, George Evans, Jack Kamen, Graham Ingels, Joe Orlando, Reed Crandall and Bernard Krigstein.
 </p><p>
 There are two versions of the cover to Impact # 1. One logo is yellow and the other is white. Impact was reprinted as part of publisher Russ Cochran's Complete EC Library in 1988. Between April and August 1999, Cochran (in association with Gemstone Publishing) reprinted all five individual issues. This complete run was later rebound, with covers included, in a single softcover EC Annual.
+</p><p>
+<a href="Impact01.html">Impact #1 - Master Race</a>
 </p>
+
 </body>
 </html>
