--- a/index.html
+++ b/index.html
@@ -11035,6 +11035,13 @@
 </tr>
 
 <tr>
+<td>Big Entertainment</td>
+<td>1995</td>
+<td>Publisher</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
 <td>Big Feminist But</td>
 <td>2014</td>
 <td>Alternative</td>
@@ -32077,6 +32084,13 @@
 </tr>
 
 <tr>
+<td>From Dusk Til Dawn</td>
+<td>1996</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
 <td>From Hell</td>
 <td>1991</td>
 <td>Mad Love</td>
@@ -33348,6 +33362,20 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="GeneDogs/GeneDogs.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gene Roddenberry's Lost Universe</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
+<td>Gene Roddenberry's Xander In Lost Universe</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
 </tr>
 
 <tr>
@@ -40231,6 +40259,13 @@
 </tr>
 
 <tr>
+<td>Issac Asimov's I-BOTS</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
 <td>It Ain't Me, Babe</td>
 <td>1970</td>
 <td>Last Gasp</td>
@@ -41586,6 +41621,13 @@
 <td>2012</td>
 <td>Arcana</td>
 <td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>John Jakes' Mullkon Empire</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
 </tr>
 
 <tr>
@@ -45071,6 +45113,20 @@
 <td>1987</td>
 <td>Knockabout</td>
 <td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Leonard Nimoy's Primortals</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
+<td>Leonard Nimoy's Primortals Origins</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
 </tr>
 
 <tr>
@@ -49572,6 +49628,13 @@
 </tr>
 
 <tr>
+<td>Mickey Spillane's Mike Danger</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
 <td>Microbots</td>
 <td>1971</td>
 <td>Gold Key</td>
@@ -50129,6 +50192,13 @@
 <td>1990</td>
 <td>Now</td>
 <td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mirrorworld: Rain</td>
+<td>1997</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
 </tr>
 
 <tr>
@@ -52391,10 +52461,24 @@
 </tr>
 
 <tr>
+<td>Neil Gaiman's Lady Justice</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
 <td>Neil Gaiman's Midnight Days</td>
 <td>1999</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Neil Gaiman's Mr. Hero - The Newmatic Man</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
 </tr>
 
 <tr>
@@ -52409,6 +52493,27 @@
 <td>2005</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Neil Gaiman's Phage: Shadow Death</td>
+<td>1996</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
+<td>Neil Gaiman's Teknophage</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
+</tr>
+
+<tr>
+<td>Neil Gaiman's Wheel Of Worlds</td>
+<td>1995</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
 </tr>
 
 <tr>
@@ -52500,6 +52605,13 @@
 <td>1988</td>
 <td>Adventure</td>
 <td><a href="AdventurePublications/AdventurePublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Neuro Jack</td>
+<td>1996</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
 </tr>
 
 <tr>
@@ -69176,6 +69288,13 @@
 <td>2009</td>
 <td>Tidalwave</td>
 <td><a href="Tidalwave/Tidalwave.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Teknophage Versus Zeerus</td>
+<td>1996</td>
+<td>Big Entertainment</td>
+<td><a href="BigEntertainment/BigEntertainment.html">Details</a>
 </tr>
 
 <tr>
