--- a/index.html
+++ b/index.html
@@ -17049,7 +17049,7 @@
 </tr>
 
 <tr>
-<td>Chaos Comics</td>
+<td>Chaos! Comics</td>
 <td>1993</td>
 <td>Publisher</td>
 <td><a href="ChaosComics/ChaosComics.html">Details</a></td>
@@ -18674,6 +18674,13 @@
 <td>2000</td>
 <td>Oni</td>
 <td><a href="OniPress/OniPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coffin Comics</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="CoffinComics/CoffinComics.html">Details</a></td>
 </tr>
 
 <tr>
