--- a/Viz/Viz.html
+++ b/Viz/Viz.html
@@ -234,16 +234,16 @@ Titles
 <li><a href="Viz151.jpg">Jojo's Bizarre Adventure</a> (2005)
 <li><a href="Viz152.jpg">Jormungand</a> (2009)
 <li><a href="Viz153.jpg">Juni Taisen: Zodiac War</a>  (2018)
-<li>Junko Mizuno's Cinderalla   (2002)
-<li>Junko Mizuno's Hansel &amp; Gretel  (2003)
-<li>Justy   (1988)
-<li>Kaguya-sama: Love Is War    (2018)
-<li>Kakuriyo: Bed &amp; Breakfast for Spirits   (2018)
-<li>Kamikaze Girls  (2006)
-<li>Kamisama Kiss   (2010)
-<li>Kare First Love (2004)
-<li>Kaze Hikaru     (2006)
-<li>Kekkaishi   (2005)
+<li><a href="Viz154.jpg">Junko Mizuno's Cinderalla</a> (2002)
+<li><a href="Viz155.jpg">Junko Mizuno's Hansel &amp; Gretel</a> (2003)
+<li><a href="Viz156.jpg">Junko Mizuno's Princess Mermaid</a> (2003)
+<li><a href="Viz157.jpg">Justy</a> (1988)
+<li><a href="Viz158.jpg">Kaguya-sama: Love Is War</a> (2018)
+<li><a href="Viz159.jpg">Kakuriyo: Bed &amp; Breakfast for Spirits</a>   (2018)
+<li><a href="Viz160.jpg">Kamikaze Girls</a>  (2006)
+<li><a href="Viz161.jpg">Kare First Love</a> (2004)
+<li><a href="Viz162.jpg">Kaze Hikaru</a> (2006)
+<li><a href="Viz163.jpg">Kekkaishi</a>   (2005)
 <li>Kenka Bancho Otome: Love’s Battle Royale    (2018)
 <li>Kiki's Delivery Service (2006)
 <li>Kimi ni todoke: From Me to You  (2009)
