--- a/Viz/Viz.html
+++ b/Viz/Viz.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Viz.jpg">
+<img src="Viz1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
