--- a/index.html
+++ b/index.html
@@ -6194,6 +6194,13 @@
 </tr>
 
 <tr>
+<td>Anubis</td>
+<td>1996</td>
+<td>Didactic Chocolate</td>
+<td><a href="DidacticChocolatePress/DidacticChocolatePress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Anything Goes!</td>
 <td>1986</td>
 <td>Fantagraphics</td>
@@ -24168,6 +24175,13 @@
 <td>2018</td>
 <td>Shortbox</td>
 <td><a href="ShortboxComics/ShortboxComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Didactic Chocolate Press</td>
+<td>1996</td>
+<td>Publisher</td>
+<td><a href="DidacticChocolatePress/DidacticChocolatePress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -57272,6 +57286,13 @@
 <td>1943</td>
 <td>Quality</td>
 <td><a href="PlasticMan/PlasticMan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Plastic Soda</td>
+<td>1996</td>
+<td>Didactic Chocolate</td>
+<td><a href="DidacticChocolatePress/DidacticChocolatePress.html">Details</a></td>
 </tr>
 
 <tr>
