--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -61,7 +61,6 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics41.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics42.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics43.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Fantagraphics139.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics44.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics45.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics46.jpg"></div>
@@ -78,7 +77,6 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics57.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics58.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics59.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Fantagraphics138.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics60.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics61.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics62.jpg"></div>
@@ -136,7 +134,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics114.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics115.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics116.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Fantagraphics117jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics117.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics118.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics119.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics120.jpg"></div>
@@ -157,6 +155,11 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics137.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics135.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics136.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics137.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics138.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics139.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics140.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics141.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -341,6 +344,7 @@ Titles
 <li><a href="Fantagraphics130.jpg">Weasel</a> (1999)
 <li><a href="Fantagraphics131.jpg">Weathercraft</a> (2010)
 <li><a href="Fantagraphics132.jpg">Wheela, Biker Bitch of the Apocalypse</a> (2007)    
+<li><a href="Fantagraphics141.jpg">Whoa, Nellie!</a> (1996)
 <li><a href="Fantagraphics133.jpg">Whot Not!</a> (1994)
 <li><a href="Fantagraphics134.jpg">Wipeout</a> (2003)
 <li><a href="Fantagraphics137.jpg">Worn Tuff Elbow</a> (2004)
