--- a/index.html
+++ b/index.html
@@ -47734,6 +47734,13 @@
 </tr>
 
 <tr>
+<td>Mad Science</td>
+<td>2001</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mad-Dog</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -47878,6 +47885,13 @@
 <td>1962</td>
 <td>ACG</td>
 <td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Magic Boy And The Robot Elf</td>
+<td>1996</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48053,6 +48067,13 @@
 <td>2011</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Malinky Robot: Bicycle</td>
+<td>2005</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48466,6 +48487,13 @@
 <td>1988</td>
 <td>Heroic</td>
 <td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marlene</td>
+<td>2006</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49337,6 +49365,13 @@
 </tr>
 
 <tr>
+<td>Max The Magnificent</td>
+<td>1987</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Maxfield Parrish</td>
 <td>1870</td>
 <td>Creator</td>
@@ -49650,6 +49685,13 @@
 </tr>
 
 <tr>
+<td>Meggazzar Dude Special</td>
+<td>1991</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mekanix</td>
 <td>2002</td>
 <td>Marvel</td>
@@ -49905,6 +49947,13 @@
 <td>1963</td>
 <td>DC</td>
 <td><a href="MetalMen/MetalMen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Metal Men Of Mars &amp; Other Improbable Tales</td>
+<td>1989</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50398,6 +50447,13 @@
 </tr>
 
 <tr>
+<td>Midnight Sun</td>
+<td>2006</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Midnight Tales</td>
 <td>1972</td>
 <td>Charlton</td>
@@ -50601,6 +50657,13 @@
 </tr>
 
 <tr>
+<td>Migraine Boy</td>
+<td>2000</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mike Allred</td>
 <td>1970</td>
 <td>Creator</td>
@@ -50675,6 +50738,13 @@
 <td>1950</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Milk &amp; Cheese</td>
+<td>1991</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50993,6 +51063,13 @@
 </tr>
 
 <tr>
+<td>Mister Blank</td>
+<td>1996</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mister Ed, The Talking Horse</td>
 <td>1962</td>
 <td>Gold Key</td>
@@ -51210,6 +51287,13 @@
 </tr>
 
 <tr>
+<td>Money Talks</td>
+<td>1996</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mongrel</td>
 <td>1994</td>
 <td>Northstar</td>
@@ -51259,6 +51343,13 @@
 </tr>
 
 <tr>
+<td>Monster</td>
+<td>1997</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monster &amp; Madman</td>
 <td>2014</td>
 <td>IDW</td>
@@ -51270,6 +51361,13 @@
 <td>2007</td>
 <td>AIT Planet Lar</td>
 <td><a href="AITPlanetLar/AITPlanetLar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Monster Boy Comics</td>
+<td>1997</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51347,6 +51445,13 @@
 <td>1989</td>
 <td>Globe</td>
 <td><a href="MonstersAttack/MonstersAttack.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Monsters In My Tummy</td>
+<td>1999</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51853,6 +51958,13 @@
 </tr>
 
 <tr>
+<td>Mr. Day &amp; Mr. Night</td>
+<td>1993</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mr. Fixitt</td>
 <td>1993</td>
 <td>Heroic</td>
@@ -51871,6 +51983,13 @@
 <td>1986</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mr. Night</td>
+<td>2005</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52140,6 +52259,13 @@
 </tr>
 
 <tr>
+<td>Murder Can Be Fun</td>
+<td>1996</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Murder Falcon</td>
 <td>2018</td>
 <td>Image</td>
@@ -52270,6 +52396,13 @@
 <td>1963</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Muzz</td>
+<td>2008</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52448,6 +52581,13 @@
 </tr>
 
 <tr>
+<td>My Monkey's Name Is Jennifer</td>
+<td>2002</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>My Most Secret Desire</td>
 <td>1995</td>
 <td>Drawn &amp; Quarterly</td>
@@ -52620,6 +52760,13 @@
 <td>2012</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mystery Man</td>
+<td>1988</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52837,6 +52984,13 @@
 <td>2019</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Narcolepsy Dreams</td>
+<td>1995</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53207,6 +53361,13 @@
 <td>1983</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Neomen</td>
+<td>1987</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53588,6 +53749,13 @@
 </tr>
 
 <tr>
+<td>Next Exit</td>
+<td>2004</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Next Gen Warz</td>
 <td>2010</td>
 <td>Image</td>
@@ -53676,6 +53844,13 @@
 <td>2008</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Night</td>
+<td>1995</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53994,6 +54169,20 @@
 </tr>
 
 <tr>
+<td>Nightmares &amp; Fairy Tales</td>
+<td>2002</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nightmares &amp; Fairy Tales Annabell's Story</td>
+<td>2010</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nightmares On Elm Street</td>
 <td>1991</td>
 <td>Innovation</td>
@@ -54302,6 +54491,13 @@
 </tr>
 
 <tr>
+<td>No Hope</td>
+<td>1993</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>No Love Lost</td>
 <td>1997</td>
 <td>Drawn &amp; Quarterly</td>
@@ -54467,6 +54663,13 @@
 <td>1986</td>
 <td>Renegade</td>
 <td><a href="RenegadePress/RenegadePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Normalman - The Novel</td>
+<td>1987</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54750,6 +54953,13 @@
 </tr>
 
 <tr>
+<td>Oblivion City</td>
+<td>1991</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Occult Crimes Taskforce</td>
 <td>2006</td>
 <td>Image</td>
@@ -54803,6 +55013,13 @@
 <td>2008</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Oddjob</td>
+<td>1999</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55093,6 +55310,13 @@
 </tr>
 
 <tr>
+<td>On The Bus</td>
+<td>1994</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Once &amp; Future</td>
 <td>2019</td>
 <td>Boom!</td>
@@ -55118,6 +55342,13 @@
 <td>1985</td>
 <td>Epic</td>
 <td><a href="OneEpic/OneEpic.html">Details</a></td>
+</tr>
+
+<tr>
+<td>One Fisted Tales</td>
+<td>1990</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55601,6 +55832,13 @@
 <td>1952</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Outlook Grim: The Dead Nasties</td>
+<td>2004</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
@@ -76069,6 +76307,14 @@
 </tr>
 
 <tr>
+<td>Whoa, Nellie!</td>
+<td>1996</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+
+</tr>
+
+<tr>
 <td>Whodunnit?</td>
 <td>1986</td>
 <td>Eclipse</td>
@@ -77144,6 +77390,13 @@
 <td>2007</td>
 <td>Tidalwave</td>
 <td><a href="Tidalwave/Tidalwave.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wretch</td>
+<td>1997</td>
+<td>Slave Labor</td>
+<td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
 <tr>
