--- a/DrawnQuarterly/DrawnQuarterly.html
+++ b/DrawnQuarterly/DrawnQuarterly.html
@@ -327,7 +327,7 @@ Titles
 <li><a href="DrawnQuarterly122.jpg">Nowhere</a> (1996)
 <li><a href="DrawnQuarterly123.jpg">Off Season</a> (2019)
 <li><a href="DrawnQuarterly124.jpg">Onward Towards Our Noble Deaths</a> (2011)  
-<li><a href="DrawnQuarterly125.jpg">Optic Nerve</a>  (1995) 
+<li><a href="../OpticNerve/OpticNerve.html">Optic Nerve</a>  (1995) 
 <li><a href="DrawnQuarterly126.jpg">Or Else</a> (2004) 
 <li><a href="DrawnQuarterly127.jpg">Owner's Manual to Terrible Parenting</a> (2015) 
 <li><a href="../PalookaVille/PalookaVille.html">Palooka-Ville</a> (1991) 
