--- a/index.html
+++ b/index.html
@@ -55514,6 +55514,13 @@
 
 <tr>
 <td>Optic Nerve</td>
+<td>1991</td>
+<td>Adrian Tomine</td>
+<td><a href="OpticNerve/OpticNerve.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Optic Nerve</td>
 <td>1995</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
